# tuw_door_detection

./: CMakeLists.txt  README.md  package.xml
cfg/: Door2DDetector.cfg
files/: doors.csv  traffic_cones.csv
include/: base_pub_object.h  cone_object.h  door2d_detector_node.h  door_object.h  dummy.h  object_publisher_node.h  static_door_publisher_node.h
launch/: config.yaml  door2d_detector_node.launch  object_publisher_node.launch  static_door_publisher_node.launch
sensor_model_evaluator/: CMakeLists.txt  package.xml
sensor_model_evaluator/cfg/: SensorModelEvaluatorNode.cfg
sensor_model_evaluator/files/: result.csv
sensor_model_evaluator/include/: laser_scan_contour.h  (+6 more)
src/: base_pub_object.cpp  cone_object.cpp  door2d_detector_node.cpp  door_object.cpp  dummy.cpp  object_publisher_node.cpp  static_door_publisher_node.cpp
tuw_door_detection/: CMakeLists.txt  package.xml
tuw_door_detection/cfg/: DepthDetector.cfg  Door2DDetector.cfg
tuw_door_detection/config/: d435_laser_filtered.yaml  d435_laser_raw.yaml
tuw_door_detection/config/maps/roblab_all_rooms/refined/: mapped_roblab_rooms.yaml
tuw_door_detection/config/rviz/: r0_with_localization.rviz
tuw_door_detection/include/: contour.h  door2d_detector_node.h  door_depth_detector.h  door_detection.h  door_detector.h  door_detector_imgproc_node.h  door_detector_node.h  door_line_detector.h  measurements.h
tuw_door_detection/include/datastructures/: contour_container.h  contour_tree.h  octo_object_map.h
tuw_door_detection/include/imgproc/: door_detection.h  door_detector_imgproc.h  door_detector_imgproc_node.h
tuw_door_detection/include/laserproc/: contour.h  door_depth_detector.h  door_detection.h  door_detector_base.h  door_line_detector.h  sensor_model_evaluator.h
tuw_door_detection/launch/: detector_with_om_eval_bag.launch  detector_with_sm_eval_bag.launch  door2d_detector_node.launch  door_detector_node.launch  door_detector_rawlog.launch  door_imgproc_node.launch  record_rawlog.launch
tuw_door_detection/src/: contour.cpp  door2d_detector_node.cpp  door_depth_detector.cpp  door_detection.cpp  door_detector.cpp  door_detector_imgproc.cpp  door_detector_imgproc_node.cpp  door_detector_node.cpp  door_line_detector.cpp  measurements.cpp
tuw_door_detection/src/datastructures/: contour_container.cpp  contour_tree.cpp  octo_object_map.cpp
tuw_door_detection/src/image_processor/: door_detector_imgproc.cpp
tuw_door_detection/src/imgproc/: door_detection.cpp  door_detector_imgproc.cpp  door_detector_imgproc_node.cpp
tuw_door_detection/src/laser_processor/: door_depth_detector.cpp  door_detector_base.cpp  sensor_model_evaluator.cpp
tuw_door_detection/src/laserproc/: contour.cpp  door_depth_detector.cpp  door_detection.cpp  door_detector.cpp  door_line_detector.cpp
tuw_door_detection_launches/: CMakeLists.txt  package.xml
tuw_doordetection/: CMakeLists.txt  package.xml
tuw_measurement_utils/: CMakeLists.txt  package.xml
tuw_object_publisher/: CMakeLists.txt  package.xml
(+50 files in other folders)
